--- a/styles.css
+++ b/styles.css
@@ -28,22 +28,17 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 100px;
-  background-color: var(--background-color2);
-  margin: -20 0;
+  /* height: 100px; */
+  background-color: var(--hover-color-button);
   padding: 10px;
   z-index: 2;
 }
 
 #header-img-container {
   display: block;
-  width: 60%;
+  width: 50%;
   margin-left: 20px;
-  padding-top: 20px;
-}
-
-#header-img {
-  margin-top: 15px;
+  /* padding-top: 20px; */
 }
 
 figure {
@@ -60,8 +55,8 @@ figcaption {
 
 #nav-bar {
   display: flex;
-  justify-content: space-evenly;
-  width: 40%;
+  justify-content: flex-end;
+  width: 50%;
 }
 
 .nav-link,
@@ -80,16 +75,20 @@ figcaption {
   color: var(--hover-color);
 }
 
+nav a {
+  width: 100px;
+}
+
 main {
   position: relative;
   top: 20px;
   margin-top: 0;
   padding-top: 40px;
   display: block;
-  /* height: calc(100vh - 60px); */
   width: 100%;
   background-color: var(--background-color2);
   text-align: center;
+  border: 1px solid black;
 }
 
 #title-and-email {
@@ -105,8 +104,8 @@ h1 {
 #email {
   width: 250px;
   height: 30px;
-  border: 2px solid var(--font-color);
   font-size: 0.8rem;
+  padding: 0.5em 1em;
 }
 
 button,
@@ -149,19 +148,23 @@ iframe {
 #price-container {
   display: flex;
   justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
-.price:first-of-type {
+/* .price:first-of-type {
   margin-right: 10px;
 }
 
 .price:last-of-type {
   margin-left: 10px;
-}
+} */
 
 .price {
   width: 33%;
   max-width: 240px;
+  flex-basis: 180px;
+  flex-grow: 1;
   border: 1px solid var(--font-color);
   height: 300px;
   background-color: var(--background-color2);
@@ -180,7 +183,7 @@ iframe {
 footer {
   display: flex;
   top: 80px;
-  background-color: var(--background-color3);
+  background-color: var(--hover-color-button);
   font-size: 0.8rem;
   padding: 20px;
 }
@@ -203,25 +206,29 @@ footer a {
   width: 100px;
 }
 
-@media only screen and (max-width: 650px) {
-  #header {
-    margin-top: 1px;
-  }
+@media (max-width: 650px) {
   #header-img-container {
     display: none;
   }
 
-  #nav-bar {
-    width: 100%;
-    padding-left: -20px;
+  #header {
+    padding-bottom: 20px;
   }
 
-  .nav-links {
+  #nav-bar {
     width: 100%;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
+
+  #title-and-email {
+    margin-top: 100px;
+  }
+
   h1 {
+    /* margin-top: 60px; */
     font-size: 2rem;
+    margin-bottom: 0;
   }
   button {
     font-size: 0.7rem;
