--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
-  /* height: 100px; */
   background-color: var(--hover-color-button);
   padding: 10px;
   z-index: 2;
@@ -38,7 +37,6 @@ body {
   display: block;
   width: 50%;
   margin-left: 20px;
-  /* padding-top: 20px; */
 }
 
 figure {
@@ -90,15 +88,15 @@ main {
   width: 100%;
   background-color: var(--background-color2);
   text-align: center;
-  border: 1px solid black;
 }
 
 #title-and-email {
   margin-top: 60px;
 }
 h1 {
-  margin-top: 0;
-  margin-bottom: 30px;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  /* margin-bottom: 30px; */
   font-family: Garamond, sans-serif;
   font-size: 3rem;
 }
@@ -130,6 +128,7 @@ button:hover,
 #information {
   margin-top: 60px 15px 0 15px;
   font-size: 1rem;
+  padding-top: 50px;
 }
 
 #information p {
@@ -152,20 +151,13 @@ iframe {
   justify-content: center;
   gap: 10px;
   flex-wrap: wrap;
+  padding: 50px 0;
 }
-
-/* .price:first-of-type {
-  margin-right: 10px;
-}
-
-.price:last-of-type {
-  margin-left: 10px;
-} */
 
 .price {
-  width: 33%;
+  /* width: 33%; */
   max-width: 240px;
-  flex-basis: 180px;
+  flex-basis: 240px;
   flex-grow: 1;
   border: 1px solid var(--font-color);
   height: 300px;
@@ -228,7 +220,8 @@ footer a {
   }
 
   h1 {
-    /* margin-top: 60px; */
+    padding-top: 0;
+    padding-bottom: 0;
     font-size: 2rem;
     margin-bottom: 0;
   }
@@ -237,6 +230,7 @@ footer a {
   }
   #information {
     font-size: 0.8rem;
+    padding-top: 0;
   }
 
   iframe {
@@ -244,14 +238,22 @@ footer a {
     height: 175px;
   }
 
+  #price-container {
+    padding: 0 20px;
+  }
+
   .price {
-    height: 240px;
+    /* width: 180px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /* height: 240px; */
   }
   .price-header {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
   .price-text {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
   .price-price {
     font-size: 1rem;
